# open_gl_tools

./: CMakeLists.txt  LICENSE  README.md  build.sh
src/: CMakeLists.txt  main.cpp  window.cpp
src/glad/: CMakeLists.txt  glad.c
src/graphics/: CMakeLists.txt  graphics.cpp  graphics.hpp  line.cpp  line.hpp  line_shader.fs  line_shader.vs
src/shader/: CMakeLists.txt  shader.cpp  shader.hpp  trans_shader.fs  trans_shader.vs
src/window/: CMakeLists.txt  window.cpp  window.hpp
